Ajustando rotas para utilizar o usuario logado
