# src/app/routes/address.route.js
@@ -1,12 +1,12 @@
 const express = require('express');
 const controller = require('../controllers/address.controller');
-
+const auth = require('../middlewares/auth');
 const router = express.Router();
 
-router.post('/user/:userId', controller.create);
+router.post('/me', auth.verifyToken, controller.create);
 router.get('/', controller.getAll);
-router.get('/user/:userId/', controller.getByUserId);
-router.put('/user/:userId', controller.edit);
-router.delete('/user/:userId', controller.delet);
+router.get('/me', auth.verifyToken, controller.getByUserId);
+router.put('/me', auth.verifyToken, controller.edit);
+router.delete('/me', auth.verifyToken, controller.delet);
 
 module.exports = router;
